--- a/about.html
+++ b/about.html
@@ -33,8 +33,9 @@
         <img src="img/aboutyou.jpg" alt="Music Favorit">
         <p>Music</p>
     </div>
+        <!--Activity  -->
     <div class="favorite-item" onclick="showAnimation(this)">
-        <img src="img/aboutyou.jpg" alt="Music Favorit">
+        <img src="img/pmr.jpg" alt="My Activity">
         <p>Music</p>
     </div>
 </section>
@@ -43,4 +44,5 @@
     </footer>
 
 </body>
+
 </html>
