--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <!--Activity  -->
     <div class="favorite-item" onclick="showAnimation(this)">
         <img src="img/pmr.jpg" alt="My Activity">
-        <p>Music</p>
+        <p>My Activity Favorit</p>
     </div>
 </section>
     <footer>
@@ -46,3 +46,4 @@
 </body>
 
 </html>
+
