--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
     </header>
     <section class="about" class="about-me">
         <img src="img/aboutme.jpg" alt="Foto Profil Salsa" class="profile-pic">
-        <p>Hello! My name is Salsa Sabrina Amanda. I love watching K-Dramas, especially <strong>Twinkling Watermelon</strong>. My favorite food is <strong>mie ayam</strong>, I enjoy cooking, and I always make sure to stay active by exercising regularly.</p>
+        <p>Hi, my name is Salsa Sabrina Amanda. I live in North Sumatra, more precisely in Gebang District. I was born on December 29, 2007.
+             I love watching K-Dramas, especially <strong>Twinkling Watermelon</strong>. My favorite food is <strong>mie ayam</strong>, I enjoy cooking, and I always make sure to stay active by exercising regularly.</p>
     </section>
     <section class="favorites">
     <div class="favorite-item" onclick="showAnimation(this)">
@@ -46,5 +47,6 @@
 </body>
 
 </html>
+
 
 
